--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -13,3 +13,34 @@ springdoc:
     tags-sorter: alpha
     operations-sorter: method
     groups-order: ASC
+
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/user_mng?useSSL=false&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
+    username: root
+    password: root
+    hikari:
+      auto-commit: false
+      connection-test-query: SELECT 1
+      minimum-idle: 10
+      maximum-pool-size: 50
+
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+      format_sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: false
+        order_inserts: true
+        jdbc:
+          batch_size: 100
+    open-in-view: false
+    defer-datasource-initialization: true
+    show-sql: true
