[MODULE_AUTH] User 로그인

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -48,3 +48,8 @@ spring:
 logging:
   level:
     org.springframework.security: info
+
+common:
+  jwt:
+    secret_key: dGhpc2lzMzJiYnl0ZXNsb25nc2VjdXJla2V5IQ==
+    expire_time: 3600000 # 1시간
