[MODULE_AUTH] QUERY-LOG 설정

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
       format_sql: true
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
         use_sql_comments: false
         order_inserts: true
         jdbc:
