--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,27 @@ services:
       - backend
     volumes:
       - ./insert_users_final.sql:/docker-entrypoint-initdb.d/insert_users_final.sql
+    tmpfs:
+      - /var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "mysql", "-uroot", "-proot"]
       interval: 5s
       timeout: 3s
       retries: 10
       start_period: 30s
+
+  redis:
+    image: redis:7.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - backend
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   auth:
     build:
@@ -30,29 +45,10 @@ services:
     networks:
       - backend
 
-  kafka:
-    image: bitnami/kafka:3.6.1
-    container_name: kafka
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_CFG_NODE_ID: 1
-      KAFKA_CFG_PROCESS_ROLES: controller,broker
-      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_CFG_LOG_DIRS: /tmp/kraft-combined-logs
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-    networks:
-      - backend
-
   kakao:
     build:
       context: ./kakao
     container_name: kakao
-    depends_on:
-      - kafka
     ports:
       - "8081:8081"
     networks:
