--- a/kakao/Dockerfile
+++ b/kakao/Dockerfile
@@ -2,4 +2,4 @@ FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY build/libs/kakao.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java",  "-Dspring.profiles.active=docker","-jar", "app.jar"]
