--- a/kakao/src/main/resources/application.yml
+++ b/kakao/src/main/resources/application.yml
@@ -11,11 +11,11 @@ springdoc:
     tags-sorter: alpha
     operations-sorter: method
     groups-order: ASC
-spring:
-  data:
-    redis:
-      host: redis
-      port: 6379
 kakao:
   send:
     count: 100
+    token: kakao-token-1,kakao-token-2,kakao-token-3,kakao-token-4
+
+coroutine:
+  thread:
+    cnt: 4
