--- a/sms/Dockerfile
+++ b/sms/Dockerfile
@@ -2,4 +2,4 @@ FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY build/libs/sms.jar app.jar
 EXPOSE 8082
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java",  "-Dspring.profiles.active=docker", "-jar", "app.jar"]
