--- a/sms/src/main/resources/application-docker.yml
+++ b/sms/src/main/resources/application-docker.yml
@@ -1,5 +1,5 @@
-#spring:
-#  data:
-#    redis:
-#      host: redis
-#      port: 6379
+spring:
+  data:
+    redis:
+      host: redis
+      port: 6379
